--- a/index.html
+++ b/index.html
@@ -252,15 +252,7 @@
     <div class="container">
         <h1>Contact</h1>
         <div class="big-paragraph">
-            <p>Neutra direct trade Portland master cleanse, narwhal keffiyeh
-            wolf American Apparel YOLO. American Apparel Intelligentsia
-            tattooed, 90's plaid Portland roof party cliche sriracha master
-            cleanse. Polaroid blog cronut meggings plaid American Apparel 3
-            wolf moon, wolf Wes Anderson Blue Bottle bicycle rights. Biodiesel
-            street art roof party gastropub meggings swag bicycle rights,
-            shabby chic hella leggings pickled blog umami. Pork belly High Life
-            hoodie, wolf readymade Echo Park yr asymmetrical four dollar toast
-            locavore Helvetica mlkshk meggings vinyl.</p>
+            <p>Like our style? You can contact us through a number of ways listed below:</p>
         </div>
 
         <div>
