--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
  
       <link href='http://fonts.googleapis.com/css?family=PT+Sans|Roboto' rel='stylesheet' type='text/css'>
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 
 </head>
 <body data-spy="scroll" data-target=".navbar">
@@ -163,22 +162,22 @@
                 <div class="col-md-12">
                     <h1>Portfolio of Work</h1>
  
-                    <div class="col-md-4 col-xs-4">
+                    <div class="col-md-4 col-xs-6">
                         <a href="http://swiftax.github.io/Karma/" target=
-                        "_blank"><img height="100%" src="img/karma-site.png"
-                        width="100%">Landing Page</a>
+                        "_blank"><img src="img/karma-site.png"
+                        >Landing Page</a>
                     </div>
  
-                    <div class="col-md-4 col-xs-4">
+                    <div class="col-md-4 col-xs-6">
                         <a href="http://swiftax.github.io/Grocery_App/" target=
-                        "_blank"><img height="100%" src="img/grocery_app.png"
-                        width="100%">Grocery App</a>
+                        "_blank"><img src="img/grocery_app.png"
+                        >Grocery App</a>
                     </div>
  
-                    <div class="col-md-4 col-xs-4">
+                    <div class="col-md-4 col-xs-12">
                         <a href="http://swiftax.com" target=
-                        "_blank"><img height="100%" src="img/swiftax.png"
-                        width="100%">Swiftax</a>
+                        "_blank"><img src="img/swiftax.png"
+                        >Swiftax</a>
                     </div>
                 </div>
             </div>
