--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title></title>
+  <meta name="viewport" content="width=device-width = 1.0,initial-scale = 1.0" />
       <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" href="css/bootstrap.css"
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
