--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="item active">
       <img src="img/city.png" alt="city" class="img-responsive">
             <div class="carousel-caption">
-        <h3>Welcome to My Site</h3>
+        <h3 class="welcome">Welcome to My Site</h3>
         <h1>Anthony Tropeano</h1>
         <p>CPA, Business Advisor and Web Developer</p>
         </div>
@@ -135,7 +135,7 @@
   </div>
   <div class="intro column">
     <h2>Introduction</h2>
-    <p>Hello everyone, thanks for visiting my site. I'm a CPA / Web Developer living in South Florida.</p>
+    <p>Hello everyone, thanks for visiting my site. I'm a </br> CPA / Web Developer living in South Florida.</p>
   </div>
   <div class="skills column">
     <h3>My Skills</h3>
