--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="carousel-caption">
         <h3 class="welcome">Welcome to My Site</h3>
         <h1>Anthony Tropeano</h1>
-        <p>Christian, husband, soon-to-be-father, CPA, Business Advisor and Web Developer</p>
+        <p>Christian, husband, soon-to-be-father, <br>CPA, Business Advisor and Web Developer</p>
         </div>
     </div>
     <div class="item">
