--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="carousel-caption">
         <h3 class="welcome">Welcome to My Site</h3>
         <h1>Anthony Tropeano</h1>
-        <p>Christian, husband, soon-to-be-father, <br>CPA, Business Advisor and Web Developer</p>
+        <p>Christian, husband, <br>soon-to-be-father, <br>CPA, Business Advisor and Web Developer</p>
         </div>
     </div>
     <div class="item">
@@ -135,7 +135,7 @@
   </div>
   <div class="intro column">
     <h2>Introduction</h2>
-    <p>Hello everyone, thanks for visiting my site. I'm a </br> CPA / Web Developer living in South Florida.</p>
+    <p>Hello everyone, thanks for visiting my site. I'm a CPA and Web Developer living in South Florida.</p>
   </div>
   <div class="skills column">
     <h3>My Skills</h3>
