--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   </div>
   <div class="intro column">
     <h2>Introduction</h2>
-    <p>Hello everyone, thanks for visiting my site. I'm a CPA and Web Developer living in South Florida.</p>
+    <p>Hello everyone, thanks for visiting my site. <br>I'm a CPA and Web Developer living in <br> South Florida.</p>
   </div>
   <div class="skills column">
     <h3>My Skills</h3>
