--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
 </head>
 <body data-spy="scroll" data-target=".navbar">
+<!- Facebook Footer Link -->
+
+
+
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 <div class="container-fluid">
 <div class="navbar-header">
@@ -272,11 +276,11 @@
 
         <p class="small-paragraph">Thank You for Visiting My Site.</p>
         <div class="social">
-        <button><a href="http://facebook.com" target=
-        "_blank">Facebook</a></button> <button><a href=
-        "https://www.linkedin.com/in/swiftax" target=
-        "_blank">LinkedIn</a></button>
-    </div>
+          <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+<script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/swiftax" data-format="inline" data-related="false"></script>
+
+        <a href="https://twitter.com/elTony" class="twitter-follow-button" data-show-count="false">Follow @elTony</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     </div>
     </section>
         
