--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
 
         <p class="small-paragraph">Thank You for Visiting My Site.</p>
         <div class="social">
-          <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-<script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/swiftax" data-format="inline" data-related="false"></script>
+          <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
+<script type="IN/Share" data-url="https://www.linkedin.com/in/anthonytropeano" data-counter="top"></script>
 
         <a href="https://twitter.com/elTony" class="twitter-follow-button" data-show-count="false">Follow @elTony</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
