--- a/index.html
+++ b/index.html
@@ -283,13 +283,12 @@
 
         <p class="small-paragraph">Thank You for Visiting My Site.</p>
         <div class="social">
-        <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
-          <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
-<script type="IN/Share" data-url="https://www.linkedin.com/in/anthonytropeano" data-counter="top"></script>
+        <div class="links"><div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div></div>
+          <div class="links"><script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
+<script type="IN/Share" data-url="https://www.linkedin.com/in/anthonytropeano" data-counter="top"></script></div>
 
-        <a href="https://twitter.com/elTony" class="twitter-follow-button" data-show-count="false">Follow @elTony</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-    </div>
+        <div class="links"><a href="https://twitter.com/elTony" class="twitter-follow-button" data-show-count="false">Follow @elTony</a></div>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script
     </section>
         
 
