--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 
         <p class="small-paragraph">Thank You for Visiting My Site.</p>
         <div class="social">
-        <div class="links"><div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div></div>
+        <div class="links"><div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-action="like" data-show-faces="true" data-share="false"></div></div>
           <div class="links"><script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
 <script type="IN/Share" data-url="https://www.linkedin.com/in/anthonytropeano" data-counter="top"></script></div>
 
