--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                     
                     <div class="col-sm-10">                      
                       <textarea class="form-control" placeholder=
-                    "Enter your message" rows="3" style="resize:none"></textarea> 
+                    "Enter your message" rows="5" cols="40" style="resize:none"></textarea> 
                       </div>
                     </div>
                   <div class="form-group">
