Semantic HTML Nav

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body data-spy="scroll" data-target=".navbar">
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button class="navbar-toggle" data-target=".navbar-collapse"
@@ -48,7 +48,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </nav>
 
     <div class="carousel slide" data-interval="8000" data-ride="carousel" id=
     "carousel">
@@ -70,10 +70,10 @@
                     <h3 class="welcome">Welcome to My Site</h3>
 
                     <h1>Anthony Tropeano</h1>
-
                     <p>Christian, husband,<br>
                     soon-to-be-father,<br>
                     CPA, Business Advisor and Web Developer</p>
+
                 </div>
             </div>
 
@@ -349,10 +349,6 @@
                 </div>
                 </div>
             </form>
-
-
-            <div>
-
             <p class="small-paragraph">Feel free to reach out to us for any
             questions or stop by our office! :-)</p>
 
