--- a/index.html
+++ b/index.html
@@ -192,7 +192,6 @@
         </div>
     </section>
     <hr>
-
     <section id="portfolio">
         <div class="container">
             <div class="row">
@@ -221,7 +220,31 @@
 
     <section id="FAQ">
         <div class="container">
-            <h1>FAQs</h1>
+            <h1 class="learn-more">FAQs </h1>
+              <!-- Modal Button -->
+            <div class="row">
+            <div class="modal-button">
+            <button class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">View Resume/CV.</button>  
+            </div>
+            </div>
+
+            <!-- Small Modal -->
+            <div class="modal fade bs-example-modal-lg" tabIndex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                  <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <h4 class="modal-title" id="myModalLabel">Resume</h4>
+                  </div>
+                    <div class="modal-body">
+                      <iframe id="resume" src="pdf/Tropeano_Anthony_Resume_10June2015.pdf"></iframe>
+                    </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn=btn-default" data-dismiss="modal">Close</button>
+                      </div>
+                </div>
+              </div>
+            </div>
 
             <div class="panel-group" id="accordion">
                 <div class="panel panel-default">
@@ -302,8 +325,8 @@
 
     <section id="contact">
         <div class="container">
-            <h1>Contact</h1>
-            <div class="big-paragraph">
+            <h1 class="contact-h1">Contact</h1>
+            <div class="contact-heading">
                 <p>Like our style? Contact us below:</p>
             </div>
             <form class="form-horizontal" action="/login" method="post" name="login">
@@ -387,14 +410,18 @@ lang: en_US
 
     ================================================== -->
     <!-- Can place script tags with JavaScript files here -->
-    <script src="js/scripts.js"></script> <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script> <script src="js/jquery.stellar.min.js"></script> <script src=
+    <script src="js/scripts.js"></script> 
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script> 
+    <script src="js/jquery.stellar.min.js"></script> 
+    <script src="js/jquery-media.js" type="text/javascript"></script>
+    <script src=
 "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script> <script type="text/javascript">
 var $root = $('html, body');
     $('.navbar-nav a').click(function() {
       var href = $.attr(this, 'href');
       $root.animate( {
         scrollTop: $(href).offset().top
-      }, 500, function () {
+      }, 1000, function () {
         window.location.hash = href;
       });
       return false;
