--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                       <iframe id="resume" src="pdf/Tropeano_Anthony_Resume_10June2015.pdf"></iframe>
                     </div>
                       <div class="modal-footer">
-                        <button type="button" class="btn=btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                       </div>
                 </div>
               </div>
