--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Tony Tropeano - Start Up Consulting / Design & Development</title>
   <meta name="viewport" content="width=device-width = 1.0,initial-scale = 1.0" />
       <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" href="css/bootstrap.css"
@@ -9,8 +9,6 @@
  
       <link href='http://fonts.googleapis.com/css?family=PT+Sans|Roboto' rel='stylesheet' type='text/css'>
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
-
-
 
 
 <!-- End of Head -->
@@ -24,8 +22,7 @@
                 data-toggle="collapse" type="button"><span class=
                 "sr-only">Toggle Navigation</span> <span class=
                 "icon-bar"></span> <span class="icon-bar"></span> <span class=
-                "icon-bar"></span></button> <a class="navbar-brand" href="#">AT
-                Design and Development</a>
+                "icon-bar"></span></button> <a class="navbar-brand" href="#">Tony Tropeano</a>
             </div>
 
             <div class="navbar-collapse collapse">
@@ -73,7 +70,7 @@
                 <div class="carousel-caption">
                     <h3 class="welcome">Welcome to My Site</h3>
 
-                    <h1>Anthony Tropeano</h1>
+                    <h1>Tony Tropeano</h1>
                     <p>Christian, husband,<br>
                     soon-to-be-father,<br>
                     CPA, Business Advisor and Web Developer</p>
@@ -342,6 +339,7 @@
             <div class="contact-heading">
                 <p>Like our style? Contact us below:</p>
             </div>
+
             <form class="form-horizontal" action="/login" method="post" name="login">
                 <div class="form-group">
                     <label class="col-sm-2 control-label" for=
@@ -368,7 +366,7 @@
                       <label class="col-sm-2 control-label" for="message">Message *</label> 
                     
                     <div class="col-sm-10">                      
-                      <textarea class="form-control" placeholder=
+                      <textarea class="form-control message-box" placeholder=
                     "Enter your message" rows="5" cols="40" style="resize:none"></textarea> 
                       </div>
                     </div>
@@ -385,6 +383,7 @@
                 </div>
                 </div>
             </form>
+            <p id="visible-comment"></p>
             <p class="small-paragraph">Feel free to reach out to us for any
             questions or stop by our office! :-)</p>
 
@@ -423,10 +422,10 @@ lang: en_US
 
     ================================================== -->
     <!-- Can place script tags with JavaScript files here -->
-    <script src="js/scripts.js"></script> 
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script> 
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>     <script src="js/scripts.js"></script> 
+
     <script src="js/jquery.stellar.min.js"></script> 
-    <script src="js/jquery-media.js" type="text/javascript"></script>
+    <script src="js/jquery.media.js" type="text/javascript"></script>
     <script src=
 "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script> <script type="text/javascript">
 var $root = $('html, body');
