--- a/index.html
+++ b/index.html
@@ -384,6 +384,7 @@
                 </div>
             </form>
             <p id="visible-comment"></p>
+            <p id="charCount"></p>
             <p class="small-paragraph">Feel free to reach out to us for any
             questions or stop by our office! :-)</p>
 
